--- a/pcso-lotto-and-games/testing.html
+++ b/pcso-lotto-and-games/testing.html
@@ -165,7 +165,7 @@ function closeNav() {
 	<a href="https://facebook.com/sharer.php?u=https://yup.ph" style="width:33.33333%; margin-right:10px; border-radius:5px; display:inline-block; background:#167EFB; font-size:13px; text-align:center"><b>facebook</b></a>
 	<a href="https://twitter.com/share?url=https://yup.ph&amp;text=How%20to%20Franchise%20Jollibee%20in%20the%20Philippines&amp;hashtags=JollibeeFranchising" style="border-radius:5px; width:33.33333%; color:#fff; background:#19B5FE; font-size:13px; text-align:center"><b>twitter</b></a>
 	</div><br>
-	<img src="../../images/Jollibee.jpg" alt="Does God Know the Exact Day I Will Die?" style="width:100%; max-width:1400px;"><br>
+	<img src="../images/6-49-how.png" alt="Does God Know the Exact Day I Will Die?" style="width:100%; max-width:1400px;"><br>
 	
     <div style="width:100%; max-width:900px; margin:auto"><h3 style="color:#4B77BE;">Have a Slice of Our Success</h3>
     <p>Joining the Jollibee Group is a winning investment. Through the years, we have developed into a company with the image that prizes customers above anything else. This is due to the fact that we are always up to date with current consumer trends, keeping a keen eye to what our customers are looking for. We constantly introduce new products, we keep in touch with our customers through various programs and promotion and we develop marketing campaigns that touch our customers’ sentiments.</p>
@@ -252,19 +252,19 @@ function closeNav() {
     <div class="row"><div class="half">
     <!-- Article 1 -->
     <article><a href="http://www.fb.com" class="sp"><div style="overflow:hidden; box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16)">
-    <div style="height:205px; overflow:hidden"><img src="../../images/MCDO.jpg" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
+    <div style="height:205px; overflow:hidden"><img src="../images/6-49-how.png" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
     <header><p><a href="http://www.fb.com" class="sp">How to Franchise McDonalds in the Philippines?</a></p></header></div></div></a></article><br><br class="hide-s">
     <!-- Article 2 -->
     <article><a href="http://www.fb.com" class="sp"><div style="overflow:hidden; box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16)">
-    <div style="height:205px; overflow:hidden"><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
+    <div style="height:205px; overflow:hidden"><img src="../images/6-49-how.png" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
     <header><p><a href="http://www.fb.com" class="sp">How to Franchise Chowking in the Philippines?</a></p></header></div></div></a></article><br></div><div class="half">
     <!-- Article 3 -->
     <article><a href="http://www.fb.com" class="sp"><div style="overflow:hidden; box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16)">
-    <div style="height:205px; overflow:hidden"><img src="../../images/mcdo2.png" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
+    <div style="height:205px; overflow:hidden"><img src="../images/6-49-how.png" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
     <header><p><a href="http://www.fb.com" class="sp">How to Franchise Chowking in the Philippines?</a></p></header></div></div></a></article><br><br class="hide-s">
     <!-- Article 4 -->
     <article><a href="http://www.fb.com" class="sp"><div style="overflow:hidden; box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16)">
-    <div style="height:205px; overflow:hidden"><img src="../../images/Jollibee.jpg" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
+    <div style="height:205px; overflow:hidden"><img src="../images/6-49-how.png" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
     <header><p><a href="http://www.fb.com" class="sp">How to Franchise Chowking in the Philippines?</a></p></header></div></div></a></article></div></div></div></main></div>
     
     <div class="side shake">
@@ -277,43 +277,43 @@ function closeNav() {
     <div style="background:#f2f2f2;"><p style="padding:5px; padding-top:8px; font-size:13px; text-transform:uppercase; text-align:center; letter-spacing:7px"><b>Related Articles</b></p></div><aside><div class="row" style="width:100%; max-width:450px; height:1300px; margin:auto">
     <!-- Article 1 -->
     <div style="width:100%; height:10%; border-top:1px solid #ccc;"><div style="width:40%; padding:16px; float:left;">
-    <a href="" class="sk" title=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%;"></a></div>
+    <a href="" class="sk" title=""><img src="../images/6-49-how.png" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%;"></a></div>
     <div style="width:60%; float:left;"><p style="margin-top:29px"><a href="" class="sp">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 2 / Ads -->
     <div style="width:100%; height:10%; border-top:1px solid #ccc;"><div style="width:40%; padding:16px; float:left;">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
+    <a href=""><img src="../images/6-49-how.png" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
     <div style="width:60%; float:left;"><p style="margin-top:29px"><a href="" class="sp">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 3 -->
     <div style="width:100%; height:10%; border-top:1px solid #ccc;"><div style="width:40%; padding:16px; float:left;">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
+    <a href=""><img src="../images/6-49-how.png" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
     <div style="width:60%; float:left;"><p style="margin-top:29px"><a href="" class="sp">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 4 -->
     <div style="width:100%; height:10%; border-top:1px solid #ccc;"><div style="width:40%; padding:16px; float:left;">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
+    <a href=""><img src="../images/6-49-how.png" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
     <div style="width:60%; float:left;"><p style="margin-top:29px"><a href="" class="sp">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 5 / Ads -->
     <div style="width:100%; height:10%; border-top:1px solid #ccc;"><div style="width:40%; padding:16px; float:left;">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
+    <a href=""><img src="../images/6-49-how.png" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
     <div style="width:60%; float:left;"><p style="margin-top:29px"><a href="" class="sp">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 6 -->
     <div style="width:100%; height:10%; border-top:1px solid #ccc;"><div style="width:40%; padding:16px; float:left;">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
+    <a href=""><img src="../images/6-49-how.png" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
     <div style="width:60%; float:left;"><p style="margin-top:29px"><a href="" class="sp">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 7 -->
     <div style="width:100%; height:10%; border-top:1px solid #ccc;"><div style="width:40%; padding:16px; float:left;">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
+    <a href=""><img src="../images/6-49-how.png" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
     <div style="width:60%; float:left;"><p style="margin-top:29px"><a href="" class="sp">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 8 -->
     <div style="width:100%; height:10%; border-top:1px solid #ccc;"><div style="width:40%; padding:16px; float:left;">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
+    <a href=""><img src="../images/6-49-how.png" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
     <div style="width:60%; float:left;"><p style="margin-top:29px"><a href="" class="sp">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 9 / Ads -->
     <div style="width:100%; height:10%; border-top:1px solid #ccc;"><div style="width:40%; padding:16px; float:left;">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
+    <a href=""><img src="../images/6-49-how.png" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
     <div style="width:60%; float:left;"><p style="margin-top:29px"><a href="" class="sp">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 10 -->
     <div style="width:100%; height:10%; border-top:1px solid #ccc;"><div style="width:40%; padding:16px; float:left;">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
+    <a href=""><img src="../images/6-49-how.png" alt="Does God Know the Exact Day I Will Die?" style="margin-top:9px; width:100%"></a></div>
     <div style="width:60%; float:left;"><p style="margin-top:29px"><a href="" class="sp">How to Franchise Chowking?</a></p></div></div>
     </div></aside><br>
     <div style="text-align:center; background:#f2f2f2; border-radius:9px; padding:16px; width:100%; max-width:450px; margin:auto">
