--- a/pcso-lotto-and-games/testing.html
+++ b/pcso-lotto-and-games/testing.html
@@ -269,7 +269,7 @@ function closeNav() {
     
     <div class="side shake">
     <div style="background:#f2f2f2; text-align:center; border-radius:3px;"><a style="font-family:Arial; font-size:11px; color:#626567; text-transform:uppercase; margin-top:5px; letter-spacing:10px"><b>Advertisement</b></a>
-    <img src="../../images/Jollibee.jpg" alt="Does God Know the Exact Day I Will Die?" style="margin-top:4px; width:100%; max-width:1400px;">
+    <img src="../images/6-49-how.png" alt="Does God Know the Exact Day I Will Die?" style="margin-top:4px; width:100%; max-width:1400px;">
     </div><br>
     
     <!-- Related Articles -->
