--- a/pcso-lotto-and-games/Grand-lotto-6-55.html
+++ b/pcso-lotto-and-games/Grand-lotto-6-55.html
@@ -276,7 +276,7 @@ function closeNav() {
 	<a href="Ultra-lotto-6-58.html" class="ff" style="color:#4B77BE; font-size:14px; float:right; text-decoration:none; display:inline-block">Ultra Lotto 6/58 &#x276f;</a>
   	</div>
     
-	<div id="disqus_thread"></div>
+	<div style="padding:16px" id="disqus_thread"></div>
 <script>
 
 /**
