--- a/pcso-lotto-and-games/Grand-lotto-6-55.html
+++ b/pcso-lotto-and-games/Grand-lotto-6-55.html
@@ -274,7 +274,7 @@ function closeNav() {
    	<br>
 	<a href="Super-lotto-6-49.html" class="ff" style="color:#4B77BE; font-size:14px; text-decoration: none; display:inline-block">&#x276e; Super Lotto 6/49</a>
 	<a href="Ultra-lotto-6-58.html" class="ff" style="color:#4B77BE; font-size:14px; float:right; text-decoration:none; display:inline-block">Ultra Lotto 6/58 &#x276f;</a>
-  	</div>
+  	
     
 	<div style="padding:16px" id="disqus_thread"></div>
 <script>
@@ -298,7 +298,7 @@ s.setAttribute('data-timestamp', +new Date());
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 	
 	
-  <div class="side">
+  </div><div class="side">
     <img src="../images/6-55-how.png" alt="How to play PCSO Grand Lotto 6/55" class="hide-s" style="width:100%; max-width:650px; border-radius:6px; box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)">
  
 	  <br class="hide-s">
