--- a/pcso-lotto-and-games/Grand-lotto-6-55.html
+++ b/pcso-lotto-and-games/Grand-lotto-6-55.html
@@ -275,8 +275,8 @@ function closeNav() {
 	<a href="Super-lotto-6-49.html" class="ff" style="color:#4B77BE; font-size:14px; text-decoration: none; display:inline-block">&#x276e; Super Lotto 6/49</a>
 	<a href="Ultra-lotto-6-58.html" class="ff" style="color:#4B77BE; font-size:14px; float:right; text-decoration:none; display:inline-block">Ultra Lotto 6/58 &#x276f;</a>
   	
-    
-	<div style="padding:16px" id="disqus_thread"></div>
+    <br>
+	<div id="disqus_thread"></div>
 <script>
 
 /**
