--- a/pcso-lotto-and-games/New-Design.html
+++ b/pcso-lotto-and-games/New-Design.html
@@ -260,7 +260,17 @@ function closeNav() {
     
     <div class="side shake">
     <div style="background:#f2f2f2; text-align:center; border-radius:3px;"><a style="font-family:Arial; font-size:10px; color:#626567; text-transform:uppercase; margin-top:5px; letter-spacing:10px"><b>Advertisement</b></a>
-    <img src="../../images/Jollibee.jpg" alt="Does God Know the Exact Day I Will Die?" style="margin-top:4px; width:100%; max-width:1400px;">
+    <div style="text-align:center">
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- Small -->
+	<ins class="adsbygoogle"
+	style="display:block"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="9196104101"
+	data-ad-format="auto"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script></div>
     </div><br>
     
     <!-- Related Articles -->
