--- a/pcso-lotto-and-games/New-Design.html
+++ b/pcso-lotto-and-games/New-Design.html
@@ -260,7 +260,7 @@ function closeNav() {
     
     <div class="side shake">
     <div style="background:#f2f2f2; text-align:center; border-radius:3px;"><a style="font-family:Arial; font-size:10px; color:#626567; text-transform:uppercase; margin-top:5px; letter-spacing:10px"><b>Advertisement</b></a>
-    <div style="text-align:center">
+    <div style="text-align:center; padding:16px">
 	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<!-- Small -->
 	<ins class="adsbygoogle"
