--- a/pcso-lotto-and-games/New-Design.html
+++ b/pcso-lotto-and-games/New-Design.html
@@ -264,7 +264,7 @@ function closeNav() {
 	    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Side fixed -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:336px;height:280px; margin:auto"
+     style="display:inline-block;width:336px;height:280px; margin-top:8px"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="7065250191"></ins>
 <script>
