--- a/pcso-lotto-and-games/New-Design.html
+++ b/pcso-lotto-and-games/New-Design.html
@@ -163,7 +163,7 @@ function closeNav() {
     <h1 class="tl" style="text-align:center; color:#404040; -webkit-margin-after:0">Paano mag-Franchise ng McDonald's sa Pilipinas</h1><br>
 	<p class="ff au" style="color:#626567; text-align:center">February 14, 2018</p><br>
 	<!-- Social Media share button -->
-	<img src="../../images/MCDO.jpg" alt="How to Franchise McDonald's in the Philippines" style="width:100%">
+	<img src="../images/MCDO.jpg" alt="How to Franchise McDonald's in the Philippines" style="width:100%">
 	<p class="au3 ff" style="margin-top:25px; margin-left:25px; color:#626567;">by <a href="../../Business/Management/About-McDonalds.html" style="color:#404040">Paul Mamparo</a><br><span class="au1"><a href="http://mcdonalds.com.ph/pages/content/franchising" style="color:#626567">Site admin, TagLish.ph</a></span></p>
 	
     <div style="width:100%; max-width:900px; margin:auto">
