--- a/pcso-lotto-and-games/New-Design.html
+++ b/pcso-lotto-and-games/New-Design.html
@@ -243,19 +243,19 @@ function closeNav() {
     <div class="row fcolor"><div class="half">
     <!-- Article 1 -->
     <article><a href="http://www.fb.com" class="sp"><div class="articleE">
-    <div class="articleF"><img src="../../images/mcdofaqs2.png" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
+    <div class="articleF"><img src="../images/6-58-how.png" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
     <header><p><a href="http://www.fb.com">McDonalds Franchising FAQs (Frequently Asked Questions)</a></p></header></div></div></a></article><br></div><div class="half">
     <!-- Article 2 -->
     <article><a href="http://www.fb.com" class="sp"><div class="articleE">
-    <div class="articleF"><img src="../../images/Jollibee.jpg" alt="How to Franchise Jollibee in the Philippines" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
+    <div class="articleF"><img src="../images/6-58-how.png" alt="How to Franchise Jollibee in the Philippines" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
     <header><p><a href="http://www.fb.com">How to Franchise Jollibee in the Philippines?</a></p></header></div></div></a></article><br></div><div class="half">
     <!-- Article 3 -->
     <article><a href="http://www.fb.com" class="sp"><div class="articleE">
-    <div class="articleF"><img src="../../images/mcdo2.png" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
+    <div class="articleF"><img src="../images/6-58-how.png" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
     <header><p><a href="http://www.fb.com">How to Franchise Chowking in the Philippines?</a></p></header></div></div></a></article><br></div><div class="half">
     <!-- Article 4 -->
     <article><a href="http://www.fb.com" class="sp"><div class="articleE">
-    <div class="articleF"><img src="../../images/Jollibee.jpg" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
+    <div class="articleF"><img src="../images/6-58-how.png" alt="Does God Know the Exact Day I Will Die?" style=" width:100%; height:205px"></div><div style="height:70px; padding-left:30px">
     <header><p><a href="http://www.fb.com">How to Franchise Chowking in the Philippines?</a></p></header></div></div></a></article></div></div></div></main></div>
     
     <div class="side shake">
@@ -278,7 +278,7 @@ function closeNav() {
     <div style="background:#f2f2f2;"><p class="ff" style="padding:5px; padding-top:8px; font-size:13px; text-transform:uppercase; text-align:center; letter-spacing:7px"><b>Related Articles</b></p></div><aside><div class="row fcolor" style="width:100%; max-width:450px; height:1300px; margin:auto">
     <!-- Article 1 -->
     <div class="article"><div class="articleB">
-    <a href="" title=""><img src="../../images/mcdofaqs3.png" alt="" class="articleC"></a></div>
+    <a href="" title=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 2 / Ads -->
     <div class="article"><div class="articleB">
@@ -286,11 +286,11 @@ function closeNav() {
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 3 -->
     <div class="article"><div class="articleB">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="" class="articleC"></a></div>
+    <a href=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 4 -->
     <div class="article"><div class="articleB">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="" class="articleC"></a></div>
+    <a href=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
     <div class="articleD""><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 5 / Ads -->
     <div class="article"><div class="articleB">
@@ -298,15 +298,15 @@ function closeNav() {
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 6 -->
     <div class="article"><div class="articleB">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="" class="articleC"></a></div>
+    <a href=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 7 -->
     <div class="article"><div class="articleB">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="" class="articleC"></a></div>
+    <a href=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 8 -->
     <div class="article"><div class="articleB">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="" class="articleC"></a></div>
+    <a href=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 9 / Ads -->
     <div class="article"><div class="articleB">
@@ -314,7 +314,7 @@ function closeNav() {
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 10 -->
     <div class="article"><div class="articleB">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="" class="articleC"></a></div>
+    <a href=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
     </div></aside></div></div>
 	
