--- a/pcso-lotto-and-games/New-Design.html
+++ b/pcso-lotto-and-games/New-Design.html
@@ -284,9 +284,9 @@ function closeNav() {
     <div style="height:130px; padding:4px; overflow:hidden; border-top:1px solid #ccc">
 	    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block; font-weight:bold"
      data-ad-format="fluid"
-     data-ad-layout-key="-ho+f-27-5d+ij"
+     data-ad-layout-key="-hx+d-1a-6a+gm"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="6703423584"></ins>
 <script>
