--- a/pcso-lotto-and-games/New-Design.html
+++ b/pcso-lotto-and-games/New-Design.html
@@ -281,7 +281,7 @@ function closeNav() {
     <a href="" title=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 2 / Ads -->
-    <div style="height:10%; padding:4px; overflow:hidden; border-top:1px solid #ccc">
+    <div class="article" style="padding:4px; overflow:hidden">
 	    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block; height:122px; overflow:hidden"
