--- a/pcso-lotto-and-games/New-Design.html
+++ b/pcso-lotto-and-games/New-Design.html
@@ -325,9 +325,17 @@ function closeNav() {
     <a href=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 9 / Ads -->
-    <div class="article"><div class="articleB">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="" class="articleC"></a></div>
-    <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
+    <div class="article" style="padding:4px; overflow:hidden">
+	    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; height:122px; overflow:hidden"
+     data-ad-format="fluid"
+     data-ad-layout-key="-hx+d-1a-6a+gm"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="6703423584"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>
     <!-- Article 10 -->
     <div class="article"><div class="articleB">
     <a href=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
