--- a/pcso-lotto-and-games/New-Design.html
+++ b/pcso-lotto-and-games/New-Design.html
@@ -281,7 +281,7 @@ function closeNav() {
     <a href="" title=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 2 / Ads -->
-    <div class="article" style="padding:4px; overflow:hidden">
+    <div class="article" style="height:130px; padding:4px; overflow:hidden">
 	    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block; height:122px; overflow:hidden"
@@ -301,7 +301,7 @@ function closeNav() {
     <a href=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
     <div class="articleD""><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 5 / Ads -->
-    <div class="article" style="padding:4px; overflow:hidden">
+    <div class="article" style="height:130px; padding:4px; overflow:hidden">
 	    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block; height:122px; overflow:hidden"
@@ -325,7 +325,7 @@ function closeNav() {
     <a href=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 9 / Ads -->
-    <div class="article" style="padding:4px; overflow:hidden">
+    <div class="article" style="height:130px; padding:4px; overflow:hidden">
 	    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block; height:122px; overflow:hidden"
