--- a/pcso-lotto-and-games/New-Design.html
+++ b/pcso-lotto-and-games/New-Design.html
@@ -338,11 +338,11 @@ function closeNav() {
 </script></div>
 	<!-- Article 10 -->		      
 	<div class="article"><div class="articleB">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="" class="articleC"></a></div>
+    <a href=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
     <!-- Article 11 -->
     <div class="article"><div class="articleB">
-    <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="" class="articleC"></a></div>
+    <a href=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>		      
     <!-- Article 12 -->
     <div class="article"><div class="articleB">
@@ -359,8 +359,7 @@ function closeNav() {
      data-ad-slot="7065250191"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-								
+</script>								
     </div><br>				       
     </div></aside></div></div>
 	
