--- a/pcso-lotto-and-games/New-Design.html
+++ b/pcso-lotto-and-games/New-Design.html
@@ -275,7 +275,7 @@ function closeNav() {
     
     <!-- Related Articles -->
     
-    <div style="background:#f2f2f2;"><p class="ff" style="padding:5px; padding-top:8px; font-size:13px; text-transform:uppercase; text-align:center; letter-spacing:7px"><b>Related Articles</b></p></div><aside><div class="row fcolor" style="width:100%; max-width:450px; height:1300px; margin:auto">
+    <div style="background:#f2f2f2;"><p class="ff" style="padding:5px; padding-top:8px; font-size:13px; text-transform:uppercase; text-align:center; letter-spacing:7px"><b>Related Articles</b></p></div><aside><div class="row fcolor" style="width:100%; max-width:450px; margin:auto">
     <!-- Article 1 -->
     <div class="article"><div class="articleB">
     <a href="" title=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
