--- a/pcso-lotto-and-games/New-Design.html
+++ b/pcso-lotto-and-games/New-Design.html
@@ -345,7 +345,7 @@ function closeNav() {
     <a href=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>		      
     <!-- Article 12 -->
-    <div class="article"><div class="articleB">
+    <div class="article" style="border-top:1px solid #ccc"><div class="articleB">
     <a href=""><img src="../images/6-58-how.png" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
 						       <br>
