--- a/pcso-lotto-and-games/New-Design.html
+++ b/pcso-lotto-and-games/New-Design.html
@@ -159,13 +159,13 @@ function closeNav() {
 	    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Small -->
 <ins class="adsbygoogle"
-     style="display:block; text-align:center"
+     style="display:block; text-align:center; border:1px solid #ccc"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="9196104101"
      data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script><br>
+</script>
  	<nav><a href="../index.html" class="ff" style="margin-left:2px; font-size:11px; color:#626567; text-decoration: none; display:inline-block">Home /</a>
  	<a href="../Christianity.html" class="ff" style="font-size:11px; color:#626567; text-decoration:none; display:inline-block">Business /</a>
  	<a href="../Bible.html" class="ff" style="font-size:11px; color:#626567; text-decoration:none; display:inline-block">Franchising /</a></nav>	
