--- a/pcso-lotto-and-games/New-Design.html
+++ b/pcso-lotto-and-games/New-Design.html
@@ -153,10 +153,7 @@ function closeNav() {
     document.getElementById("mySidenav").style.width = "0";
 }
 </script>
-
-	<div class="row pad">
-    <div class="main">
-	    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <div class="main"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Small -->
 <ins class="adsbygoogle"
      style="display:block; text-align:center; border:1px solid #ccc"
@@ -165,7 +162,9 @@ function closeNav() {
      data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script></div>
+	<div class="row pad">
+    <div class="main">
  	<nav><a href="../index.html" class="ff" style="margin-left:2px; font-size:11px; color:#626567; text-decoration: none; display:inline-block">Home /</a>
  	<a href="../Christianity.html" class="ff" style="font-size:11px; color:#626567; text-decoration:none; display:inline-block">Business /</a>
  	<a href="../Bible.html" class="ff" style="font-size:11px; color:#626567; text-decoration:none; display:inline-block">Franchising /</a></nav>	
