--- a/pcso-lotto-and-games/New-Design.html
+++ b/pcso-lotto-and-games/New-Design.html
@@ -155,7 +155,7 @@ function closeNav() {
 </script>
 	<div class="row pad">
     <div class="main">
-	    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	    <div class="hide-s"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Small -->
 <ins class="adsbygoogle"
      style="display:block; text-align:center; margin-bottom:5px;"
@@ -164,7 +164,7 @@ function closeNav() {
      data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script></div>
  	<nav><a href="../index.html" class="ff" style="margin-left:2px; font-size:11px; color:#626567; text-decoration: none; display:inline-block">Home /</a>
  	<a href="../Christianity.html" class="ff" style="font-size:11px; color:#626567; text-decoration:none; display:inline-block">Business /</a>
  	<a href="../Bible.html" class="ff" style="font-size:11px; color:#626567; text-decoration:none; display:inline-block">Franchising /</a></nav>	
@@ -268,7 +268,7 @@ function closeNav() {
     <header><p><a href="http://www.fb.com">How to Franchise Chowking in the Philippines?</a></p></header></div></div></a></article></div></div></div></main></div>
     
     <div class="side shake">
-    <div style="box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; padding-right:4px; padding-left:4px; padding-bottom:4px; width:100%; max-width:344px; margin:auto; background:#f2f2f2; text-align:center; border-radius:3px;"><a style="font-family:Arial; font-size:10px; color:#626567; text-transform:uppercase; margin-bottom:30px; letter-spacing:10px"><b>Advertisement</b></a>	
+    <div style="box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; padding-right:4px; padding-left:4px; width:100%; max-width:344px; margin:auto; background:#f2f2f2; text-align:center; border-radius:3px;"><a style="font-family:Arial; font-size:10px; color:#626567; text-transform:uppercase; margin-bottom:30px; letter-spacing:10px"><b>Advertisement</b></a>	
 	
 	    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Side fixed -->
