--- a/pcso-lotto-and-games/New-Design.html
+++ b/pcso-lotto-and-games/New-Design.html
@@ -245,8 +245,20 @@ function closeNav() {
     <a href="https://facebook.com/sharer.php?u=https://yup.ph" style="width:33.33333%; margin-right:5px; border-radius:20px; display:inline-block; border:1px solid #ccc; color:#626567; font-size:13px; text-align:center"><b>facebook</b></a>
     <a href="https://twitter.com/share?url=https://yup.ph&amp;text=How%20to%20Franchise%20Jollibee%20in%20the%20Philippines&amp;hashtags=JollibeeFranchising" style="border-radius:20px; width:33.33333%; color:#fff; border:1px solid #ccc; color:#626567; font-size:13px; text-align:center"><b>twitter</b></a>
     </div><br><br>
-	    
-	    <div style="width:100%; max-width:728px; border-radius:3px; overflow:hidden; padding-right:4px; padding-left:4px; margin:auto; background:#f2f2f2; text-align:center"><a style="font-family:Arial; font-size:10px; color:#626567; text-transform:uppercase; margin-bottom:30px; letter-spacing:10px"><b>Advertisement</b></a>	
+	    <div class="hide-m hide-l" style="box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; padding-right:4px; padding-left:4px; width:100%; max-width:344px; margin:auto; background:#f2f2f2; text-align:center; border-radius:3px;"><a style="font-family:Arial; font-size:10px; color:#626567; text-transform:uppercase; margin-bottom:30px; letter-spacing:10px"><b>Advertisement</b></a>	
+	
+	    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Side fixed -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:336px;height:280px; margin-top:5px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="7065250191"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+								
+    </div>
+	    <div class="hide-s" style="width:100%; max-width:728px; border-radius:3px; overflow:hidden; padding-right:4px; padding-left:4px; margin:auto; background:#f2f2f2; text-align:center"><a style="font-family:Arial; font-size:10px; color:#626567; text-transform:uppercase; margin-bottom:30px; letter-spacing:10px"><b>Advertisement</b></a>	
 	
 	    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Side fixed -->
