--- a/pcso-lotto-and-games/New-Design2.html
+++ b/pcso-lotto-and-games/New-Design2.html
@@ -156,7 +156,7 @@ function closeNav() {
 
 	<div class="row pad">
     <div class="main">
-    <a style="box-shadow:0 3px 5px 0 rgba(0,0,0,0.16)"><div class="hide-s"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <a style="box-shadow:0 3px 5px 0 rgba(0,0,0,0.16)"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Small -->
     <ins class="adsbygoogle"
     style="display:block; text-align:center; margin-bottom:10px;"
@@ -165,7 +165,7 @@ function closeNav() {
     data-ad-format="auto"></ins>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
-    </script></div></a>
+    </script></a>
  	<main>
     <h1 class="tl" style="text-align:center; color:#404040; -webkit-margin-before:40px; -webkit-margin-after:0">Paano mag-Franchise ng McDonald's sa Pilipinas</h1><br>
 	<p class="ff au" style="color:#626567; text-align:center">February 14, 2018</p><br>
