--- a/pcso-lotto-and-games/New-Design2.html
+++ b/pcso-lotto-and-games/New-Design2.html
@@ -156,16 +156,16 @@ function closeNav() {
 
 	<div class="row pad">
     <div class="main">
-    <a style="box-shadow:0 3px 5px 0 rgba(0,0,0,0.16)"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Small -->
     <ins class="adsbygoogle"
-    style="display:block; text-align:center; margin-bottom:10px;"
+    style="display:block; text-align:center; margin-bottom:10px; box-shadow:0 3px 5px 0 rgba(0,0,0,0.16)"
     data-ad-client="ca-pub-8489405167836126"
     data-ad-slot="9196104101"
     data-ad-format="auto"></ins>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
-    </script></a>
+    </script>
  	<main>
     <h1 class="tl" style="text-align:center; color:#404040; -webkit-margin-before:40px; -webkit-margin-after:0">Paano mag-Franchise ng McDonald's sa Pilipinas</h1><br>
 	<p class="ff au" style="color:#626567; text-align:center">February 14, 2018</p><br>
