--- a/pcso-lotto-and-games/New-Design2.html
+++ b/pcso-lotto-and-games/New-Design2.html
@@ -159,7 +159,7 @@ function closeNav() {
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Small -->
     <ins class="adsbygoogle"
-    style="display:block; text-align:center; margin-bottom:10px; box-shadow:0 3px 5px 0 rgba(0,0,0,0.16)"
+    style="display:block; text-align:center; width:100%; margin-bottom:10px; box-shadow:0 3px 5px 0 rgba(0,0,0,0.16)"
     data-ad-client="ca-pub-8489405167836126"
     data-ad-slot="9196104101"
     data-ad-format="auto"></ins>
