--- a/pcso-lotto-and-games/New-Design2.html
+++ b/pcso-lotto-and-games/New-Design2.html
@@ -156,16 +156,6 @@ function closeNav() {
 
 	<div class="row pad">
     <div class="main">
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- Small -->
-    <ins class="adsbygoogle"
-    style="display:block; text-align:center; width:100%; margin-bottom:10px; box-shadow:0 3px 5px 0 rgba(0,0,0,0.16)"
-    data-ad-client="ca-pub-8489405167836126"
-    data-ad-slot="9196104101"
-    data-ad-format="auto"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
  	<main>
     <h1 class="tl" style="text-align:center; color:#404040; -webkit-margin-before:40px; -webkit-margin-after:0">Paano mag-Franchise ng McDonald's sa Pilipinas</h1><br>
 	<p class="ff au" style="color:#626567; text-align:center">February 14, 2018</p><br>
@@ -244,22 +234,14 @@ function closeNav() {
     <a href="https://twitter.com/share?url=https://yup.ph&amp;text=How%20to%20Franchise%20Jollibee%20in%20the%20Philippines&amp;hashtags=JollibeeFranchising" style="border-radius:20px; width:33.33333%; color:#fff; border:1px solid #ccc; color:#626567; font-size:13px; text-align:center"><b>twitter</b></a>
     </div><br><br>
     <!-- Google Ads / Mobile -->
-    <div class="hide-m hide-l" style="box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; padding-right:4px; padding-left:4px; width:100%; max-width:344px; margin:auto; background:#f2f2f2; text-align:center; border-radius:3px;"><a style="font-family:Arial; font-size:10px; color:#626567; text-transform:uppercase; margin-bottom:30px; letter-spacing:10px"><b>Advertisement</b></a>
+    <div style="box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; margin:auto; text-align:center">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins class="adsbygoogle"
-    style="display:inline-block;width:336px;height:280px; margin-top:5px"
-    data-ad-client="ca-pub-8489405167836126"
-    data-ad-slot="7065250191"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script></div>
-    <!-- Google Ads / Desktop -->
-    <div class="hide-s" style="width:100%; max-width:728px; border-radius:3px; overflow:hidden; padding-right:4px; padding-left:4px; margin:auto; background:#f2f2f2; text-align:center"><a style="font-family:Arial; font-size:10px; color:#626567; text-transform:uppercase; margin-bottom:30px; letter-spacing:10px"><b>Advertisement</b></a>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <ins class="adsbygoogle"
-    style="display:inline-block;width:100%; max-width:728px; height:90px; margin-top:5px"
-    data-ad-client="ca-pub-8489405167836126"
-    data-ad-slot="5953369141"></ins>
+    style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="5525927185"></ins>
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script></div>
