--- a/pcso-lotto-and-games/New-Design2.html
+++ b/pcso-lotto-and-games/New-Design2.html
@@ -234,7 +234,7 @@ function closeNav() {
     <a href="https://twitter.com/share?url=https://yup.ph&amp;text=How%20to%20Franchise%20Jollibee%20in%20the%20Philippines&amp;hashtags=JollibeeFranchising" style="border-radius:20px; width:33.33333%; color:#fff; border:1px solid #ccc; color:#626567; font-size:13px; text-align:center"><b>twitter</b></a>
     </div><br><br>
     <!-- Google Ads / Mobile -->
-    <div style="background:#f2f2f2; padding:3px; box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; margin:auto; text-align:center">
+    <div style="background:#f2f2f2; padding:2px; box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; margin:auto; text-align:center">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins class="adsbygoogle"
     style="display:block; text-align:center;"
@@ -269,10 +269,10 @@ function closeNav() {
     
     <div class="side shake">
     <!-- Google Ads -->
-    <div style="box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; padding-right:4px; padding-left:4px; width:100%; max-width:344px; margin:auto; background:#f2f2f2; text-align:center; border-radius:3px;"><a style="font-family:Arial; font-size:10px; color:#626567; text-transform:uppercase; margin-bottom:30px; letter-spacing:10px"><b>Advertisement</b></a>
+    <div style="box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; padding:2px; width:100%; max-width:340px; margin:auto; background:#f2f2f2; text-align:center; border-radius:3px;">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins class="adsbygoogle"
-    style="display:inline-block;width:336px;height:280px; margin-top:5px"
+    style="display:inline-block;width:336px;height:280px"
     data-ad-client="ca-pub-8489405167836126"
     data-ad-slot="7065250191"></ins>
     <script>
