--- a/pcso-lotto-and-games/New-Design2.html
+++ b/pcso-lotto-and-games/New-Design2.html
@@ -269,7 +269,7 @@ function closeNav() {
     
     <div class="side shake">
     <!-- Google Ads -->
-    <div style="box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; padding:3px; width:100%; max-width:342px; margin:auto; background:#f2f2f2; text-align:center; border-radius:3px;">
+    <div style="box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; padding:3px; width:100%; max-width:342px; height:286px; margin:auto; background:#f2f2f2; text-align:center; border-radius:3px; border:1px solid #ccc">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins class="adsbygoogle"
     style="display:inline-block;width:336px;height:280px"
