--- a/pcso-lotto-and-games/New-Design2.html
+++ b/pcso-lotto-and-games/New-Design2.html
@@ -354,10 +354,10 @@ function closeNav() {
     <div class="article" style="border-bottom:1px solid #ccc"><div class="articleB">
     <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
-    <br><div style="box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; padding-right:4px; padding-left:4px; padding-bottom:4px; width:100%; max-width:344px; margin:auto; height:311px; background:#f2f2f2; text-align:center; border-radius:3px;"><a style="font-family:Arial; font-size:10px; color:#626567; text-transform:uppercase; margin-bottom:30px; letter-spacing:10px"><b>Advertisement</b></a>
+    <br><div style="box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; padding:3px; width:100%; max-width:344px; height:288px; margin:auto; background:#f2f2f2; text-align:center; border-radius:3px; border:1px solid #ccc">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins class="adsbygoogle"
-    style="display:inline-block;width:336px;height:280px; margin-top:5px"
+    style="display:inline-block;width:336px;height:280px"
     data-ad-client="ca-pub-8489405167836126"
     data-ad-slot="7065250191"></ins>
     <script>
