--- a/pcso-lotto-and-games/New-Design2.html
+++ b/pcso-lotto-and-games/New-Design2.html
@@ -55,6 +55,19 @@
 
 	<!-- Mobile Navigation -->
 	
+	<div class="hide-m hide-l" style="border:1px solid #ccc; padding:2px; position:fixed; width:100%; height:54px; bottom:0; background:#fff">
+	<a style="color:#404040;float:right; position:absolute; top:2px; right:20px; font-size:36px; margin-left:50px;" onclick="this.parentElement.style.display='none'">&times;</a>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- Ad Bottom -->
+	<ins class="adsbygoogle"
+	style="display:inline-block;width:320px;height:50px;margin:auto"
+	data-ad-client="ca-pub-8489405167836126"
+	data-ad-slot="4062277366"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+	</div>
+	
 	<nav><div id="mySidenav" class="sidenav" style="height:100%; width:0; position:fixed; z-index:1; top:0; left:0; overflow-x:hidden; transition:0.4s; padding-top:60px; background:#3F3F3F">
 	<a href="javascript:void(0)" style="position:absolute; top:0; right:25px; font-size:36px; margin-left:50px;" onclick="closeNav()">&times;</a>
 	<div class="scroll" style="height:100%; padding:20px">
