--- a/pcso-lotto-and-games/New-Design2.html
+++ b/pcso-lotto-and-games/New-Design2.html
@@ -55,12 +55,12 @@
 
 	<!-- Mobile Navigation -->
 	
-	<div class="hide-m hide-l" style="border:1px solid #ccc; padding:2px; position:fixed; width:100%; height:54px; bottom:0; background:#fff">
+	<div class="hide-m hide-l" style="z-index:5; border:1px solid #ccc; padding:2px; position:fixed; width:100%; height:54px; bottom:0; background:#fff">
 	<a style="color:#404040;float:right; position:absolute; top:2px; right:20px; font-size:36px; margin-left:50px;" onclick="this.parentElement.style.display='none'">&times;</a>
 	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<!-- Ad Bottom -->
 	<ins class="adsbygoogle"
-	style="display:inline-block;width:320px;height:50px;margin:auto"
+	style="display:inline-block;width:320px;height:50px;margin:auto; text-align:center"
 	data-ad-client="ca-pub-8489405167836126"
 	data-ad-slot="4062277366"></ins>
 	<script>
