--- a/pcso-lotto-and-games/New-Design2.html
+++ b/pcso-lotto-and-games/New-Design2.html
@@ -367,7 +367,16 @@ function closeNav() {
     <div class="article" style="border-bottom:1px solid #ccc"><div class="articleB">
     <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
-    <br><div style="box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; padding:3px; width:100%; max-width:344px; height:288px; margin:auto; background:#f2f2f2; text-align:center; border-radius:3px; border:1px solid #ccc">
+    <br><div class="hide-s hide-m" style="box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; padding:3px; width:100%; max-width:308px; height:608px; margin:auto; background:#f2f2f2; text-align:center; border-radius:3px; border:1px solid #ccc">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- AdBig -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:600px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="4633957159"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>						<div class="hide-l" style="box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; padding:3px; width:100%; max-width:344px; height:288px; margin:auto; background:#f2f2f2; text-align:center; border-radius:3px; border:1px solid #ccc">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins class="adsbygoogle"
     style="display:inline-block;width:336px;height:280px"
