--- a/pcso-lotto-and-games/New-Design2.html
+++ b/pcso-lotto-and-games/New-Design2.html
@@ -367,7 +367,7 @@ function closeNav() {
     <div class="article" style="border-bottom:1px solid #ccc"><div class="articleB">
     <a href=""><img src="../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="" class="articleC"></a></div>
     <div class="articleD"><p class="related"><a href="">How to Franchise Chowking?</a></p></div></div>
-    <br><div class="hide-s hide-m" style="position:-webkit-sticky; position:sticky; top:60px; box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; padding:3px; width:100%; max-width:308px; height:608px; margin:auto; background:#f2f2f2; text-align:center; border-radius:3px; border:1px solid #ccc">
+    <br><div class="hide-s hide-m" style="position:-webkit-sticky; position:sticky; top:0; box-shadow:0 2.5px 5px 0 rgba(0,0,0,0.16); overflow:hidden; padding:3px; width:100%; max-width:308px; height:608px; margin:auto; background:#f2f2f2; text-align:center; border-radius:3px; border:1px solid #ccc">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- AdBig -->
 <ins class="adsbygoogle"
