--- a/pcso-lotto-and-games/Jollibee.html
+++ b/pcso-lotto-and-games/Jollibee.html
@@ -210,7 +210,7 @@ function closeNav() {
     <a href="https://twitter.com/share?url=https://yup.ph&amp;text=How%20to%20Franchise%20Jollibee%20in%20the%20Philippines&amp;hashtags=JollibeeFranchising" class="fbb" style="border-radius:20px; width:33.33333%; border:1px solid #ccc; font-size:13px; text-align:center"><b>twitter</b></a>
     </div><br><br>
     <!-- Google Ads -->
-	<div style="background:#f2f2f2; padding:3px; overflow:hidden; margin:auto; border:1px solid #ccc; border-radius:3px; text-align:center">
+	<div style="background:#f2f2f2; overflow:hidden; margin:auto; text-align:center">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <ins class="adsbygoogle"
     style="display:block; text-align:center;"
